kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <PATCH>
spec:
  selector:
    name: app
  ports:
  - name: <PATCH>
    port: <PATCH>
    targetPort: <PATCH>
  type: NodePort
